--- a/pages/index/search-post/search-post.scss
+++ b/pages/index/search-post/search-post.scss
@@ -59,7 +59,7 @@
 		&-item {
 			background: #c0e5f9;
 			border-radius: 10upx;
-			margin: 0 15upx;
+			margin: 8upx 15upx;
 			padding: 0 10upx;
 			height: 50upx;
 			@include font(30upx, 50upx, $align: left, $color: #7dc5eb);
