--- a/pages/my/my-comments/my-comment.scss
+++ b/pages/my/my-comments/my-comment.scss
@@ -3,7 +3,7 @@
 	
 	&-num {
 		box-sizing: border-box;
-		width: 100%;
+		width: 750upx;
 		padding: 15upx 0;
 		padding-left: 30upx;
 		background: #f1f1f1;
